[gd_scene load_steps=10 format=2]

[ext_resource path="res://LMROMAN10-REGULAR.OTF" type="DynamicFontData" id=1]
[ext_resource path="res://game_fonts/lmroman25.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/StatDisplay.tscn" type="PackedScene" id=3]
[ext_resource path="res://incantation/scenes/Incantation_Operations.tscn" type="PackedScene" id=4]
[ext_resource path="res://bonus/BonusMenu.gd" type="Script" id=5]
[ext_resource path="res://save/player.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_color = Color( 0.462745, 0.0705882, 0.0705882, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://fonts/LMROMAN10-REGULAR.OTF"

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = SubResource( 2 )

[node name="BonusMenuBis" type="Control"]
rect_min_size = Vector2( 1300, 700 )
mouse_filter = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1300.0
margin_bottom = 700.0
rect_clip_content = true
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
margin_right = 1300.0
margin_bottom = 700.0
mouse_filter = 2
color = Color( 0.741176, 0.639216, 0.87451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1300.0
margin_bottom = 700.0
rect_clip_content = true
custom_constants/separation = 33
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/vbox"]
margin_right = 1300.0
margin_bottom = 43.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/vbox/CenterContainer2"]
margin_left = 367.0
margin_right = 933.0
margin_bottom = 43.0
custom_constants/separation = 336

[node name="titlecontainer" type="CenterContainer" parent="MarginContainer/vbox/CenterContainer2/HBoxContainer"]
margin_right = 120.0
margin_bottom = 43.0
mouse_filter = 2

[node name="title" type="Label" parent="MarginContainer/vbox/CenterContainer2/HBoxContainer/titlecontainer"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 120.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 1 )
text = "Interlude"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="points" type="Label" parent="MarginContainer/vbox/CenterContainer2/HBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 456.0
margin_right = 566.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 3 )
text = "Argent: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/vbox"]
margin_top = 76.0
margin_right = 1300.0
margin_bottom = 102.0

[node name="timer_display" parent="MarginContainer/vbox/CenterContainer" instance=ExtResource( 3 )]
pause_mode = 2
margin_left = 550.0
margin_right = 750.0
margin_bottom = 26.0

[node name="bonus_zone" type="HBoxContainer" parent="MarginContainer/vbox"]
margin_top = 135.0
margin_right = 1300.0
margin_bottom = 596.0
mouse_filter = 2
custom_constants/separation = 50

[node name="new_operations" type="VBoxContainer" parent="MarginContainer/vbox/bonus_zone"]
margin_right = 590.0
margin_bottom = 461.0
mouse_filter = 2
custom_constants/separation = 25

[node name="title" type="Label" parent="MarginContainer/vbox/bonus_zone/new_operations"]
margin_right = 590.0
margin_bottom = 43.0
custom_colors/font_color = Color( 0.905882, 0.937255, 0.341176, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Opérations"

[node name="Incantation_Operations" parent="MarginContainer/vbox/bonus_zone/new_operations" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 68.0
margin_right = 590.0
margin_bottom = 165.0
mouse_filter = 1

[node name="title2" type="Label" parent="MarginContainer/vbox/bonus_zone/new_operations"]
margin_top = 190.0
margin_right = 590.0
margin_bottom = 233.0
custom_colors/font_color = Color( 0.905882, 0.937255, 0.341176, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Nouvelles opérations"

[node name="new_operations" type="GridContainer" parent="MarginContainer/vbox/bonus_zone/new_operations"]
margin_top = 258.0
margin_right = 590.0
margin_bottom = 258.0
columns = 6
script = ExtResource( 6 )

[node name="title3" type="Label" parent="MarginContainer/vbox/bonus_zone/new_operations"]
margin_top = 283.0
margin_right = 590.0
margin_bottom = 326.0
custom_colors/font_color = Color( 0.905882, 0.937255, 0.341176, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Echanges"

[node name="swap_button" type="Button" parent="MarginContainer/vbox/bonus_zone/new_operations"]
margin_top = 351.0
margin_right = 590.0
margin_bottom = 371.0
text = "Echanger"

[node name="erase_button" type="Button" parent="MarginContainer/vbox/bonus_zone/new_operations"]
margin_top = 396.0
margin_right = 590.0
margin_bottom = 416.0
text = "Effacer"

[node name="cancel_button" type="Button" parent="MarginContainer/vbox/bonus_zone/new_operations"]
margin_top = 441.0
margin_right = 590.0
margin_bottom = 461.0
text = "Annuler"

[node name="vbox_items" type="VBoxContainer" parent="MarginContainer/vbox/bonus_zone"]
margin_left = 640.0
margin_right = 909.0
margin_bottom = 461.0

[node name="bonus_title" type="Label" parent="MarginContainer/vbox/bonus_zone/vbox_items"]
margin_right = 269.0
margin_bottom = 43.0
custom_colors/font_color = Color( 0.905882, 0.937255, 0.341176, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Objets proposés      "

[node name="list" type="GridContainer" parent="MarginContainer/vbox/bonus_zone/vbox_items"]
margin_top = 47.0
margin_right = 269.0
margin_bottom = 47.0
custom_constants/vseparation = 0
columns = 2

[node name="Stats" type="VBoxContainer" parent="MarginContainer/vbox/bonus_zone"]
margin_left = 959.0
margin_right = 1027.0
margin_bottom = 461.0

[node name="bonus_title2" type="Label" parent="MarginContainer/vbox/bonus_zone/Stats"]
margin_right = 68.0
margin_bottom = 43.0
custom_colors/font_color = Color( 0.905882, 0.937255, 0.341176, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Stats"

[node name="state_label" type="Label" parent="."]
margin_left = 1088.0
margin_top = 656.0
margin_right = 1288.0
margin_bottom = 694.0
custom_fonts/font = ExtResource( 2 )
text = "state"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_right = 229.0
margin_bottom = 70.0
window_title = "Modification de l'incantation"
dialog_text = "Confirmer?"

[node name="alert_pop_up" type="AcceptDialog" parent="."]
margin_right = 229.0
margin_bottom = 70.0
window_title = "Modification de l'incantation"
dialog_text = "Confirmer?"

[connection signal="on_pop_up_cancel" from="." to="." method="_on_pop_up_cancel"]
[connection signal="on_pop_up_ok_press" from="." to="." method="_on_pop_up_ok_press"]
[connection signal="nb_selected_operations_changed" from="MarginContainer/vbox/bonus_zone/new_operations/Incantation_Operations" to="." method="_on_Incantation_Operations_nb_selected_operations_changed"]
[connection signal="button_down" from="MarginContainer/vbox/bonus_zone/new_operations/swap_button" to="." method="_on_swap_button_down"]
[connection signal="button_down" from="MarginContainer/vbox/bonus_zone/new_operations/erase_button" to="." method="_on_erase_button_down"]
[connection signal="button_down" from="MarginContainer/vbox/bonus_zone/new_operations/cancel_button" to="." method="_on_cancel_button_down"]
